--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "firebase": "^9.14.0",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5",
-    "vuetify": "^2.6.0"
+    "vuetify": "^2.6.0",
+    "vuex": "3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
