--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^9.14.0",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5",
+    "vue-slider-component": "^3.2.24",
     "vuetify": "^2.6.0",
     "vuex": "3.0"
   },
