--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.js": "^4.1.2",
     "core-js": "^3.8.3",
     "firebase": "^9.14.0",
     "vue": "^2.6.14",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^3.6.5",
     "vue-slider-component": "^3.2.24",
     "vuetify": "^2.6.0",
